Supression Vector (TODO synchronisation)